# Proyecto2-Funcional

./: .gitignore  CHANGELOG.md  Proyecto2-Funcional.cabal  README.md
src/: Analisis.hs  Main.hs  Presupuestos.hs  Registros.hs  Reglas.hs  Reportes.hs  Simulacion.hs  Storage.hs  Types.hs
