cabal-version:       2.2

name:                Proyecto2-Funcional
version:             0.1.0.0
synopsis:            Sistema de gestión de finanzas personales en Haskell
homepage:            https://github.com/githubuser/Proyecto2-Funcional#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2026 Author name here
category:            Finance
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

executable Proyecto2-Funcional
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Types
                     , Storage
                     , Registros
                     , Presupuestos
                     , Analisis
                     , Simulacion
                     , Reglas
                     , Reportes
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , time >= 1.9
                     , containers >= 0.6
                     , directory >= 1.3
  ghc-options:         -Wall

source-repository head
  type:     git
  location: https://github.com/githubuser/Proyecto2-Funcional
